--- a/ProjektZPR/ProjektZPR.vcxproj
+++ b/ProjektZPR/ProjektZPR.vcxproj
@@ -117,11 +117,10 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="model.cpp" />
-	<ClCompile Include="start.cpp" />
-
+    <ClCompile Include="start.cpp" />
     <ClCompile Include="questioncard.cpp" />
-
     <ClCompile Include="startmenu.cpp" />
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="view.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -139,9 +138,7 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-
     <ClInclude Include="start.h" />
-
     <CustomBuild Include="questioncard.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(AdditionalInputs)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -158,7 +155,6 @@
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </Command>
     </CustomBuild>
-
     <CustomBuild Include="model.h">
       <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(AdditionalInputs)</AdditionalInputs>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
