--- a/ProjektZPR/ProjektZPR.vcxproj.filters
+++ b/ProjektZPR/ProjektZPR.vcxproj.filters
@@ -84,12 +84,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="start.cpp">
-	  <Filter>Source Files</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="deck.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="questioncard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -139,7 +142,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="start.h">
-	   <Filter>Header Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="deck.h">
       <Filter>Header Files</Filter>
