--- a/ProjektZPR/ProjektZPR.vcxproj.filters
+++ b/ProjektZPR/ProjektZPR.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClCompile Include="test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mark.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="projektzpr.ui">
@@ -148,6 +151,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Exception.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mark.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
